[package]
name = "crate-docs"
version = "0.1.0"
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features =["full"]}
shipyard = "*"
specs = "*"
chrono = "*"
sqlx = {version = "*", default-features = false, features=["sqlite","macros", "chrono","runtime-tokio"]}
pest = "*"
walkdir = "*"
clap = "*"
regex = "*"
glob = "*"
rayon = "*"
reqwest = {version = "*", features=["json"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
pulldown-cmark = "*"