[package]
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2018"
name = "crate-docs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-lock = {version = "*"}
cargo_toml = {version = "*"}
chrono = {version = "*"}
clap = {version = "*"}
csv = {version = "*"}
glob = {version = "*"}
pest = {version = "*"}
pulldown-cmark = {version = "*"}
rayon = {version = "*"}
regex = {version = "*"}
reqwest = {version = "*", features = ["json"]}
serde = {version = "*", features = ["derive"]}
serde_json = {version = "*"}
shipyard = {version = "*"}
smol = {version = "*"}
specs = {version = "*"}
sqlx = {version = "*", default-features = false, features = ["sqlite", "macros", "chrono", "runtime-tokio"]}
tokio = {version = "*", features = ["full"]}
walkdir = {version = "*"}
